MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/Broker_Status_Log__c.object-meta.xml
<CustomObject>
    <label>Broker Status Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broker Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>