MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Status Logs</relationshipLabel>
    <relationshipName>Broker_Status_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>