MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/Is_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Is_Suspension__c</fullName>
    <formula>NOT(ISBLANK(TEXT(Suspension_Start_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Suspension</label>
    <type>Checkbox</type>
</CustomField>