MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/New_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>