MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>