MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broker_Status_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>