MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Changed Date</label>
    <type>DateTime</type>
</CustomField>