MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>