MODON MRE BPDEV/force-app/main/default/objects/Broker_Status_Log__c/fields/Suspension_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Suspension_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suspension End Date</label>
    <type>DateTime</type>
</CustomField>